# lab5-panoramic

./: README.md
src/: CMakeLists.txt  PanoramicImage.cpp  PanoramicImage.h  panoramic_generator.cpp
